--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Portfolio</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
@@ -22,21 +22,64 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
-        <ul class="navbar-nav">
+        <ul class="navbar-nav d-flex justify-content-end">
           <li class="nav-item">
-            <a class="nav-link" href="https://github.com/clyntu" target="_blank">github <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="https://github.com/clyntu" target="_blank"><strong>github</strong> <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://www.linkedin.com/in/clynt-timothy-uy/" target="_blank">linkedin</a>
+            <a class="nav-link" href="https://www.linkedin.com/in/clynt-timothy-uy/" target="_blank"><strong>linkedin</strong></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">hire me</a>
+            <a class="nav-link" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"><strong>hire me</strong></a>
           </li>
-          
         </ul>
       </div>
     </nav>
   </header>
   <hr>
+  <div class="d-flex justify-content-start">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-6 col-sm-12 mt-3">
+          <section>
+              <h1>Hello, world!</h1>
+              <p>This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+              <p><a href="mailto:clynt.timothy.uy@gmail.com"><u>clynt.timothy.uy@gmail.com</u></a></p>
+          </section>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="d-flex justify-content-start" id="featured-work">
+    <div class="container">
+       <h2 class="section-title">Featured Work.</h2>
+       <div class="row">
+          <div class="col-lg-6 col-sm-12 mt-3">
+             <div class="project-card" id="project-0">
+                <div class="image gatsby-image-wrapper" style="position: relative; overflow: hidden; max-height: 85%;">
+                   <div style="width: 100%; padding-bottom: 62.5%;"></div>
+                   <img src="banana.jpg" alt="" style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; object-fit: contain; object-position: center center; opacity: 0; transition-delay: 500ms;">
+                   <picture>
+                     <img src="banana.jpg" alt="Banana" loading="lazy" style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; object-fit: contain; object-position: center center; opacity: 1; transition: opacity 500ms ease 0s;">
+                   </picture>
+                   <noscript>
+                      <picture>
+                        <img src="banana.jpg" alt="Banana" loading="lazy" style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; object-fit: contain; object-position: center center; opacity: 1; transition: opacity 500ms ease 0s;">
+                      </picture>
+                   </noscript>
+                </div>
+                <div class="image-overlay">
+                   <div class="image-overlay-text">
+                      <p class="mb-0">Banana</p>
+                      <p>is just banana</p>
+                   </div>
+                </div>
+             </div>
+          </div>
+
+       </div>
+    </div>
+ </div>
 </body>
 </html>
