--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     </nav>
   </header>
   <hr>
+
   <div class="d-flex justify-content-start">
     <div class="container">
       <div class="row">
@@ -46,40 +47,23 @@
               <p>This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
               <p><a href="mailto:clynt.timothy.uy@gmail.com"><u>clynt.timothy.uy@gmail.com</u></a></p>
           </section>
+
+          <section>
+            <div class="card bg-white text-black">
+              <img src="banana.jpg" class="card-img" alt="">
+              <div class="card-img-overlay">
+                <h6 class="card-title">Dashlabs.ai</h6>
+                <h3 class="card-title"><strong>Patient Inflow Model</strong></h3>
+              </div>
+            </div>
+          </section>
         </div>
       </div>
     </div>
   </div>
 
-  <div class="d-flex justify-content-start" id="featured-work">
-    <div class="container">
-       <h2 class="section-title">Featured Work.</h2>
-       <div class="row">
-          <div class="col-lg-6 col-sm-12 mt-3">
-             <div class="project-card" id="project-0">
-                <div class="image gatsby-image-wrapper" style="position: relative; overflow: hidden; max-height: 85%;">
-                   <div style="width: 100%; padding-bottom: 62.5%;"></div>
-                   <img src="banana.jpg" alt="" style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; object-fit: contain; object-position: center center; opacity: 0; transition-delay: 500ms;">
-                   <picture>
-                     <img src="banana.jpg" alt="Banana" loading="lazy" style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; object-fit: contain; object-position: center center; opacity: 1; transition: opacity 500ms ease 0s;">
-                   </picture>
-                   <noscript>
-                      <picture>
-                        <img src="banana.jpg" alt="Banana" loading="lazy" style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; object-fit: contain; object-position: center center; opacity: 1; transition: opacity 500ms ease 0s;">
-                      </picture>
-                   </noscript>
-                </div>
-                <div class="image-overlay">
-                   <div class="image-overlay-text">
-                      <p class="mb-0">Banana</p>
-                      <p>is just banana</p>
-                   </div>
-                </div>
-             </div>
-          </div>
 
-       </div>
-    </div>
- </div>
+
+  
 </body>
 </html>
