--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
       <a class="navbar-brand" href="#"><strong>clynt uy</strong></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
@@ -43,25 +43,52 @@
       <div class="row">
         <div class="col-lg-6 col-sm-12 mt-3">
           <section>
-              <h1>Hello, world!</h1>
+              <h1>Hello, I'm Clynt</h1>
               <p>This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
               <p><a href="mailto:clynt.timothy.uy@gmail.com"><u>clynt.timothy.uy@gmail.com</u></a></p>
           </section>
 
           <section>
-            <div class="card bg-white text-black">
-              <img src="banana.jpg" class="card-img" alt="">
-              <div class="card-img-overlay">
-                <h6 class="card-title">Dashlabs.ai</h6>
-                <h3 class="card-title"><strong>Patient Inflow Model</strong></h3>
+            <div class="row row-cols-1 row-cols-md-2 g-2">
+              <div class="card bg-white text-black">
+                <img src="banana.jpg" class="card-img" alt="">
+                <div class="card-img-overlay">
+                  <h6 class="card-title">Dashlabs.ai</h6>
+                  <h3 class="card-title"><strong>Patient Inflow Model</strong></h3>
+                </div>
+              </div>
+              <div class="card bg-white text-black">
+                <img src="banana.jpg" class="card-img" alt="">
+                <div class="card-img-overlay">
+                  <h6 class="card-title">Dashlabs.ai</h6>
+                  <h3 class="card-title"><strong>Patient Inflow Model</strong></h3>
+                </div>
+              </div>
+              <div class="card bg-white text-black">
+                <img src="banana.jpg" class="card-img" alt="">
+                <div class="card-img-overlay">
+                  <h6 class="card-title">Dashlabs.ai</h6>
+                  <h3 class="card-title"><strong>Patient Inflow Model</strong></h3>
+                </div>
+              </div>
+              <div class="card bg-white text-black">
+                <img src="banana.jpg" class="card-img" alt="">
+                <div class="card-img-overlay">
+                  <h6 class="card-title">Dashlabs.ai</h6>
+                  <h3 class="card-title"><strong>Patient Inflow Model</strong></h3>
+                </div>
               </div>
             </div>
           </section>
+
+          
+
         </div>
       </div>
     </div>
   </div>
 
+  
 
 
   
