made the cards bigger

--- a/index.html
+++ b/index.html
@@ -1,96 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portfolio</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
-      <a class="navbar-brand" href="#"><strong>clynt uy</strong></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavDropdown">
-        <ul class="navbar-nav d-flex justify-content-end">
-          <li class="nav-item">
-            <a class="nav-link" href="https://github.com/clyntu" target="_blank"><strong>github</strong> <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="https://www.linkedin.com/in/clynt-timothy-uy/" target="_blank"><strong>linkedin</strong></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"><strong>hire me</strong></a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-  </header>
-  <hr>
-
-  <div class="d-flex justify-content-start">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-6 col-sm-12 mt-3">
-          <section>
-              <h1>Hello, I'm Clynt</h1>
-              <p>This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-              <p><a href="mailto:clynt.timothy.uy@gmail.com"><u>clynt.timothy.uy@gmail.com</u></a></p>
-          </section>
-
-          <section>
-            <div class="row row-cols-1 row-cols-md-2 g-2">
-              <div class="card bg-white text-black">
-                <img src="banana.jpg" class="card-img" alt="">
-                <div class="card-img-overlay">
-                  <h6 class="card-title">Dashlabs.ai</h6>
-                  <h3 class="card-title"><strong>Patient Inflow Model</strong></h3>
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <div class="d-flex justify-content-start">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-6 col-sm-12 mt-3">
+            <header>
+              <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-transparent">
+                <a class="navbar-brand" href="#">
+                  <strong>clynt uy</strong>
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                  <ul class="navbar-nav d-flex justify-content-end">
+                    <li class="nav-item">
+                      <a class="nav-link" href="https://github.com/clyntu" target="_blank">
+                        <strong>github</strong>
+                      </a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="https://www.linkedin.com/in/clynt-timothy-uy/" target="_blank">
+                        <strong>linkedin</strong>
+                      </a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">
+                        <strong>hire me</strong>
+                      </a>
+                    </li>
+                  </ul>
                 </div>
-              </div>
-              <div class="card bg-white text-black">
-                <img src="banana.jpg" class="card-img" alt="">
-                <div class="card-img-overlay">
-                  <h6 class="card-title">Dashlabs.ai</h6>
-                  <h3 class="card-title"><strong>Patient Inflow Model</strong></h3>
-                </div>
-              </div>
-              <div class="card bg-white text-black">
-                <img src="banana.jpg" class="card-img" alt="">
-                <div class="card-img-overlay">
-                  <h6 class="card-title">Dashlabs.ai</h6>
-                  <h3 class="card-title"><strong>Patient Inflow Model</strong></h3>
-                </div>
-              </div>
-              <div class="card bg-white text-black">
-                <img src="banana.jpg" class="card-img" alt="">
-                <div class="card-img-overlay">
-                  <h6 class="card-title">Dashlabs.ai</h6>
-                  <h3 class="card-title"><strong>Patient Inflow Model</strong></h3>
-                </div>
-              </div>
-            </div>
-          </section>
-
-          
-
+              </nav>
+            </header>
+            <h1>Hello, I'm Clynt</h1>
+            <p>This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+            <p>
+              <a href="mailto:clynt.timothy.uy@gmail.com">
+                <u>clynt.timothy.uy@gmail.com</u>
+              </a>
+            </p>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-
-  
-
-
-  
-</body>
+    <div class="container">
+      <div class="row">
+        <div class="col-6">
+          <div class="card bg-dark text-white border-0">
+            <img src="banana.jpg" class="card-img" alt=""/>
+            <div class="card-img-overlay">
+              <h5 class="card-title">Patient Inflow Model</h5>
+              <p class="card-text">Dashlabs.ai</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-6">
+          <div class="card bg-dark text-white border-0">
+            <img src="banana.jpg" class="card-img" alt=""/>
+            <div class="card-img-overlay">
+              <h5 class="card-title">Patient Inflow Model</h5>
+              <p class="card-text">Dashlabs.ai</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
