added some spacing

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div class="container">
+    <div class="container" style="padding-bottom: 15rem;">
         <div class="d-flex flex-row">
             <div class="col-lg-6 col-sm-12 mt-3" style="padding-right: 0; padding-left: 0;">
                 <header>
-                    <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
+                    <nav class="navbar navbar-expand-lg navbar-light bg-transparent" style="padding-bottom: 8rem;">
                     <strong class="navbar-brand">clynt uy</strong>
-                    <button class="navbar-toggler" style="padding-right: 0;" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                    <button class="navbar-toggler" style="padding: 0" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                         <div class="collapse navbar-collapse" id="navbarNavDropdown">
@@ -45,7 +45,7 @@
                         </div>
                     </nav>
                 
-                    <h1>Hello, I'm Clynt</h1>
+                    <h1>Hello, I'm Clynt — an aspiring Software Engineer.</h1>
                     <p>This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
                     <p>
                         <a href="mailto:clynt.timothy.uy@gmail.com">
@@ -58,6 +58,7 @@
     </div>
 
     <div class="container">
+    <h1>Featured Projects</h1>
         <div class="row">
           <div class="col-md-6">
             <div class="card bg-dark text-black border-0">
