CV and changed text

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">
+                                <a class="nav-link" href="CV_Uy.pdf" target="_blank" download>
                                 <strong>hire me</strong>
                                 </a>
                             </li>
@@ -46,7 +46,8 @@
                     </nav>
                 
                     <h1>Hello, I'm Clynt — an aspiring Software Engineer.</h1>
-                    <p>This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+                    <br>
+                    <p>I'm a 4th year Computer Engineering student from UP Diliman. I build ML/AI models and develop websites as a hobby.</p>
                     <p>
                         <a href="mailto:clynt.timothy.uy@gmail.com">
                         <u>clynt.timothy.uy@gmail.com</u>
